# agentctl

./: .gitignore  BACKGROUND.md  IDEA.md  OTHER.md
.claude/: settings.local.json
agentctl/: README.md  pyproject.toml
agentctl/docs/: tmux-keybindings.md
agentctl/docs/plans/: 2025-01-23-markdown-task-storage-design.md  2025-01-25-agent-monitoring-design.md  2025-01-25-task-file-copy-design.md
agentctl/logs/: post_tool_use.json  status_line.json
agentctl/src/agentctl/: __init__.py  cli.py  tui.py
agentctl/src/agentctl/core/: __init__.py  agent_monitor.py  config.py  database.py  git.py  output_parser.py  phase_detector.py  prompt_store.py  session_parser.py  task.py  task_md.py  task_store.py  task_sync.py  tmux.py  worktree.py
agentctl/src/agentctl/daemon/: __init__.py
agentctl/src/agentctl/integrations/: __init__.py
agentctl/src/agentctl/tui/: __init__.py  watch_screen.py
agentctl/tests/core/: test_output_parser.py
docs/plans/: 2024-12-14-multi-window-agent-tracking-design.md  2024-12-14-multi-window-implementation-plan.md  2024-12-19-multi-agent-watch-implementation-plan.md  2024-12-19-multi-agent-watch-screen-design.md  2025-01-27-prompt-library-design.md
