[project]
name = "agentctl"
version = "0.1.0"
description = "AI Agent Control Center - Manage your coding agents"
readme = "README.md"
authors = [
    { name = "Tyler Sanders", email = "tyler@timesync.tech" }
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "libtmux>=0.25.0",
    "gitpython>=3.1.0",
]

[project.scripts]
agentctl = "agentctl.cli:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
